force-app/main/default/objects/AgentGov_Registration__c/AgentGov_Registration__c.object-meta.xml
<CustomObject>
    <description>Registers the AI agents AgentGov governs (Agentforce, MCP External, Custom Apex, and Flow Based) with their credentials, daily budgets, priority, and circuit breaker state.</description>
    <label>Agent Registration</label>
    <nameField>
        <displayFormat>AGT-{0000}</displayFormat>
        <label>Registration Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agent Registrations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>