force-app/main/default/objects/AgentGov_Registration__c/fields/Agent_Name__c.field-meta.xml
<CustomField>
    <fullName>Agent_Name__c</fullName>
    <label>Agent Name</label>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
    <description>Display name of the AI agent</description>
</CustomField>