force-app/main/default/objects/AgentGov_Registration__c/fields/Agent_Type__c.field-meta.xml
<CustomField>
    <fullName>Agent_Type__c</fullName>
    <label>Agent Type</label>
    <type>Picklist</type>
    <required>true</required>
    <description>Type of AI agent</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agentforce</fullName>
            </value>
            <value>
                <fullName>MCP_External</fullName>
                <label>MCP External</label>
            </value>
            <value>
                <fullName>Custom_Apex</fullName>
                <label>Custom Apex</label>
            </value>
            <value>
                <fullName>Flow_Based</fullName>
                <label>Flow Based</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>