force-app/main/default/objects/AgentGov_Registration__c/fields/Agent_User__c.field-meta.xml
<CustomField>
    <fullName>Agent_User__c</fullName>
    <label>Agent User</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Agent Registrations</relationshipLabel>
    <relationshipName>Agent_Registrations</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Salesforce user the agent runs as (an Agentforce Agent User or an integration user). REST and Governed Proxy calls made by this user need no API key while this is the only registration bound to the user. A user bound to several registrations must send the agent's key in the X-AgentGov-Key header, or the call is refused with 403 ACCESS_DENIED.</description>
</CustomField>