force-app/main/default/objects/AgentGov_Registration__c/fields/API_Key__c.field-meta.xml
<CustomField>
    <fullName>API_Key__c</fullName>
    <label>API Key</label>
    <type>Text</type>
    <length>255</length>
    <unique>true</unique>
    <externalId>true</externalId>
    <description>Deprecated since v1.2: keys are stored as a hash in API_Key_Hash__c. This field is only read to upgrade keys created by earlier releases and is cleared on first use. It will be removed in v1.3.</description>
</CustomField>