force-app/main/default/objects/AgentGov_Registration__c/fields/API_Key_Hash__c.field-meta.xml
<CustomField>
    <fullName>API_Key_Hash__c</fullName>
    <label>API Key Hash</label>
    <type>Text</type>
    <length>64</length>
    <unique>true</unique>
    <externalId>true</externalId>
    <caseSensitive>true</caseSensitive>
    <description>SHA-256 hash of the agent's API key. The key itself is never stored; REST callers are matched by hashing the key they present.</description>
</CustomField>