force-app/main/default/objects/AgentGov_Registration__c/fields/API_Key_Last_Rotated__c.field-meta.xml
<CustomField>
    <fullName>API_Key_Last_Rotated__c</fullName>
    <label>API Key Last Rotated</label>
    <type>DateTime</type>
    <description>When the agent's API key was last issued or rotated, or, for a key created before v1.2, converted to hashed storage.</description>
</CustomField>