force-app/main/default/objects/AgentGov_Registration__c/fields/API_Key_Prefix__c.field-meta.xml
<CustomField>
    <fullName>API_Key_Prefix__c</fullName>
    <label>API Key Prefix</label>
    <type>Text</type>
    <length>12</length>
    <description>The first characters of the agent's API key, so an administrator can recognise which key is in use without the framework storing the key.</description>
</CustomField>