force-app/main/default/objects/AgentGov_Registration__c/fields/Circuit_Breaker_State__c.field-meta.xml
<CustomField>
    <fullName>Circuit_Breaker_State__c</fullName>
    <label>Circuit Breaker State</label>
    <type>Picklist</type>
    <description>Circuit breaker pattern state for fault tolerance</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CLOSED</fullName>
                <default>true</default>
                <label>CLOSED</label>
            </value>
            <value>
                <fullName>OPEN</fullName>
            </value>
            <value>
                <fullName>HALF_OPEN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>