force-app/main/default/objects/AgentGov_Registration__c/fields/Cooldown_Until__c.field-meta.xml
<CustomField>
    <fullName>Cooldown_Until__c</fullName>
    <label>Cooldown Until</label>
    <type>DateTime</type>
    <description>Timestamp until which the agent is in cooldown after circuit breaker activation</description>
</CustomField>