force-app/main/default/objects/AgentGov_Registration__c/fields/Daily_API_Budget__c.field-meta.xml
<CustomField>
    <fullName>Daily_API_Budget__c</fullName>
    <label>Daily API Budget</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>0</scale>
    <defaultValue>10000</defaultValue>
    <description>Maximum number of API calls allowed per day</description>
</CustomField>