force-app/main/default/objects/AgentGov_Registration__c/fields/Daily_DML_Budget__c.field-meta.xml
<CustomField>
    <fullName>Daily_DML_Budget__c</fullName>
    <label>Daily DML Budget</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>0</scale>
    <defaultValue>3000</defaultValue>
    <description>Maximum number of DML statements allowed per day</description>
</CustomField>