force-app/main/default/objects/AgentGov_Registration__c/fields/Daily_SOQL_Budget__c.field-meta.xml
<CustomField>
    <fullName>Daily_SOQL_Budget__c</fullName>
    <label>Daily SOQL Budget</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>0</scale>
    <defaultValue>5000</defaultValue>
    <description>Maximum number of SOQL queries allowed per day</description>
</CustomField>