force-app/main/default/objects/AgentGov_Registration__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <description>Detailed description of the agent purpose and capabilities</description>
</CustomField>