force-app/main/default/objects/AgentGov_Registration__c/fields/Failure_Count__c.field-meta.xml
<CustomField>
    <fullName>Failure_Count__c</fullName>
    <label>Failure Count</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
    <description>Number of consecutive failures recorded</description>
</CustomField>