force-app/main/default/objects/AgentGov_Registration__c/fields/Half_Open_Probe_At__c.field-meta.xml
<CustomField>
    <fullName>Half_Open_Probe_At__c</fullName>
    <label>Half-Open Probe At</label>
    <type>DateTime</type>
    <description>When the single probe request allowed by a HALF_OPEN circuit breaker was admitted. Cleared when the probe reports an outcome.</description>
</CustomField>