force-app/main/default/objects/AgentGov_Registration__c/fields/Last_Active__c.field-meta.xml
<CustomField>
    <fullName>Last_Active__c</fullName>
    <label>Last Active</label>
    <type>DateTime</type>
    <description>Timestamp of the last recorded agent activity</description>
</CustomField>