force-app/main/default/objects/AgentGov_Registration__c/fields/Last_Failure__c.field-meta.xml
<CustomField>
    <fullName>Last_Failure__c</fullName>
    <label>Last Failure</label>
    <type>DateTime</type>
    <description>Timestamp of the last recorded failure</description>
</CustomField>