force-app/main/default/objects/AgentGov_Registration__c/fields/Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>Owner_Email__c</fullName>
    <label>Owner Email</label>
    <type>Email</type>
    <description>Email address of the agent owner or responsible party</description>
</CustomField>