force-app/main/default/objects/AgentGov_Registration__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <label>Priority</label>
    <type>Number</type>
    <precision>2</precision>
    <scale>0</scale>
    <defaultValue>5</defaultValue>
    <description>Agent priority for conflict resolution (1=highest)</description>
</CustomField>