force-app/main/default/objects/AgentGov_Registration__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <required>true</required>
    <description>Current operational status of the agent</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
                <default>true</default>
                <label>Inactive</label>
            </value>
            <value>
                <fullName>Throttled</fullName>
            </value>
            <value>
                <fullName>Blocked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>