force-app/main/default/objects/AgentGov_Registration__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Agent_Name__c</columns>
    <columns>Agent_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Circuit_Breaker_State__c</columns>
    <columns>Priority__c</columns>
    <columns>Last_Active__c</columns>
    <columns>Owner_Email__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>